Re-enable VB Project templates for .NET Core 3.1

--- a/packaging/Microsoft.Dotnet.Wpf.ProjectTemplates/Microsoft.DotNet.Wpf.ProjectTemplates.ArchNeutral.csproj
+++ b/packaging/Microsoft.Dotnet.Wpf.ProjectTemplates/Microsoft.DotNet.Wpf.ProjectTemplates.ArchNeutral.csproj
@@ -24,10 +24,6 @@
 
   <ItemGroup>
     <PackagingContent Include="useSharedDesignerContext.txt" SubFolder="root" />
-    
-    <!-- 
-        Do not include VB templates in .NET Core 3.0 - https://github.com/dotnet/wpf/issues/1734
-    -->
-    <PackagingContent Include="content\**\*" Exclude="content\*VisualBasic\**\*" SubFolder="root\%(RecursiveDir)" />
+    <PackagingContent Include="content\**\*" SubFolder="root\%(RecursiveDir)" />
   </ItemGroup>
 </Project>
