--- a/src/Microsoft.DotNet.Wpf/test/MultiTargeting.props
+++ b/src/Microsoft.DotNet.Wpf/test/MultiTargeting.props
@@ -20,6 +20,9 @@
     <DefineConstants Condition="$(TargetFramework.Equals('net472'))">$(DefineConstants);NET472</DefineConstants>
     
     <DefineConstants Condition="$(TargetFramework.Equals('netcoreapp3.0'))">$(DefineConstants);NETCOREAPP3_0</DefineConstants>
+    <DefineConstants Condition="$(TargetFramework.Equals('netcoreapp3.1'))">$(DefineConstants);NETCOREAPP3_1</DefineConstants>
+    <DefineConstants Condition="$(TargetFramework.Equals('netcoreapp5.0'))">$(DefineConstants);NETCOREAPP5_0</DefineConstants>
+
   </PropertyGroup>
   
   <ItemGroup Condition="'$(TargetFramework)'!='net35'">
