--- a/eng/WpfArcadeSdk/tools/SdkReferences.targets
+++ b/eng/WpfArcadeSdk/tools/SdkReferences.targets
@@ -4,7 +4,10 @@
                       Version="$(MicrosoftPrivateWinformsVersion)"
                       ExcludeAssets="All"
                       GeneratePathProperty="True"
-                      Condition="'$(MSBuildProjectExtension)'!='.vcxproj' And $(TargetFramework.StartsWith('netcoreapp3')) And '$(NoAutoMicrosoftPrivateWinformsReference)'!='true'"/>
+                      Condition="'$(MSBuildProjectExtension)'!='.vcxproj' 
+                              And '$(TargetFrameworkIdentifier)' == '.NETCoreApp' 
+                              And ('$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.1' Or '$(TargetFrameworkVersion)' == 'v5.0') 
+                              And '$(NoAutoMicrosoftPrivateWinformsReference)'!='true'"/>
 
     <!--
       When @(NetCoreReference) is non-empty, exclude all assets (ExcludeAssets = All) and re-add them in 
@@ -41,7 +44,7 @@
   <Target
     Name="ResolveMicrosoftNetCoreAppReferences"
     Returns="@(Reference)"
-    Condition="'$(PkgMicrosoft_NETCore_App)'!='' And '@(NetCoreReference)'!='' and $(TargetFramework.StartsWith('netcoreapp3')) and '$(DoNotLimitMicrosoftNetCoreReferences)'!='true'">
+    Condition="'$(PkgMicrosoft_NETCore_App)'!='' And '@(NetCoreReference)'!='' and '$(TargetFrameworkIdentifier)' == '.NETCoreApp' And ('$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.1' Or '$(TargetFrameworkVersion)' == 'v5.0') and '$(DoNotLimitMicrosoftNetCoreReferences)'!='true'">
     <!-- 
     In your project, Add a references to assemblies from Microsoft.NETCore.App like this
       <ItemGroup>
@@ -104,7 +107,7 @@
 
   <Target Name="ResolveMicrosoftWindowsDesktopAppReferences"
           Returns="@(Reference)"
-          Condition="'$(PkgMicrosoft_WindowsDesktop_App)'!='' And '@(WindowsDesktopAppReference)'!='' and $(TargetFramework.StartsWith('netcoreapp3')) and '$(DoNotLimitWindowsDesktopAppReferences)'!='true'">
+          Condition="'$(PkgMicrosoft_WindowsDesktop_App)'!='' And '@(WindowsDesktopAppReference)'!='' and '$(TargetFrameworkIdentifier)' == '.NETCoreApp' And ('$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.1' Or '$(TargetFrameworkVersion)' == 'v5.0') and '$(DoNotLimitWindowsDesktopAppReferences)'!='true'">
     <!-- 
     In your project, Add a references to assemblies from Microsoft.NETCore.App like this
       <ItemGroup>
@@ -160,7 +163,10 @@
   <Target
     Name="ResolveMicrosoftDotNetWpfGitHubReferences"
     Returns="@(ReferencePath)"
-    Condition="'@(MicrosoftDotNetWpfGitHubReference)'!='' and $(TargetFramework.StartsWith('netcoreapp3')) and '$(DoNotLimitMicrosoftDotNetWpfGitHubReferences)'!='true'">
+    Condition="'@(MicrosoftDotNetWpfGitHubReference)'!='' 
+           And '$(TargetFrameworkIdentifier)' == '.NETCoreApp' 
+           And ('$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.1' Or '$(TargetFrameworkVersion)' == 'v5.0') 
+           and '$(DoNotLimitMicrosoftDotNetWpfGitHubReferences)'!='true'">
     <!-- 
     In your project, Add a references to WPF GitHub transport package like this:
       <ItemGroup>
@@ -198,7 +204,9 @@
       </ItemGroup>
    -->
   <Target Name="ResolveWinFormsReferences"
-          Condition="'@(MicrosoftPrivateWinFormsReference)'!='' And $(TargetFramework.StartsWith('netcoreapp3'))">
+          Condition="'@(MicrosoftPrivateWinFormsReference)'!='' 
+                 And '$(TargetFrameworkIdentifier)' == '.NETCoreApp' 
+                 And ('$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.1' Or '$(TargetFrameworkVersion)' == 'v5.0') ">
     <ItemGroup>
       <Reference Include="$(PkgMicrosoft_Private_Winforms)\ref\$(TargetFramework)\%(MicrosoftPrivateWinFormsReference.Identity).dll"
                  Condition="Exists('$(PkgMicrosoft_Private_Winforms)\ref\$(TargetFramework)\%(MicrosoftPrivateWinFormsReference.Identity).dll')">
